--- a/account.html
+++ b/account.html
@@ -7,12 +7,12 @@
   	<meta name="Tinôco" content="">
     <title>ConsuWatts | Conta</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./img/logoicon.png">
+    <link rel="icon" href="./logoicon.png">
   </head>
   <body>
     <header>
       <div class="container">
-          <img src="./img/logo.png" id="logo">
+          <img src="./logo.png" id="logo">
            <div class="menu">
              <a href="account.html" id="ac" class="home">Conta </a>
              <a href="index.html" id="in" class="home">Início </a>
@@ -26,7 +26,7 @@
             <div class="profile-header"></div>
             <div class="profile-body">
                 <div class="img-perfil">
-                    <img src="./img/perfil.png" title="Loop Nerd" alt="perfil">
+                    <img src="./perfil.png" title="Loop Nerd" alt="perfil">
                 </div> 
                 <div class="info-profile">
                     <p id="n-profile"> ID: 1640273 </p>
