--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <header>
           <div class="container">
-              <img src="./img/logo.png" id="logo">
+              <img src="./logo.png" id="logo">
               <div class="menu">
                  <a href="account.html" id="ac" class="home">Conta </a>
                  <a href="site.html" id="in" class="home">Início </a>
