--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta name="Tinôco" content="">
       <title>ConsuWatts | Bem-Vindo!</title>
       <link rel="stylesheet" href="./style.css">
-      <link rel="icon" href="./img/logoicon.png">
+      <link rel="icon" href="./logoicon.png">
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
   </head>
   <body>
@@ -26,7 +26,7 @@
         <canvas id="myChart"></canvas>
         <div id="totalBox">
           <h3>Total: <span id="totalReais">R$ 0,00</span></h3>
-          <script src="./java/java.js"></script>
+          <script src="./java.js"></script>
         </div>      
     </div>
     <div class="about-us">
