--- a/help.html
+++ b/help.html
@@ -7,14 +7,14 @@
   	<meta name="Tinôco" content="">
     <title>ConsuWatts | Suporte</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./img/logoicon.png">
+    <link rel="icon" href="./logoicon.png">
     <script id="func">
     </script>
   </head>
   <body>
     <header>
       <div class="container">
-          <img src="./img/logo.png" id="logo">
+          <img src="./logo.png" id="logo">
            <div class="menu">
              <a href="account.html" id="ac" class="home">Conta </a>
              <a href="index.html" id="in" class="home">Início </a>
@@ -43,7 +43,7 @@
         <input type="submit" id="submit" value="Enviar"></input>
         </form>
   
-        <script src="./java/help.js"></script>
+        <script src="./help.js"></script>
     </div>
     <div class="dire">
         <footer>
