--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	    <meta name="Tinôco" content="">
       <title>ConsuWatts | Bem-Vindo!</title>
       <link rel="stylesheet" href="./style.css">
-      <link rel="icon" href="./logoicon.png">
-      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+      <link rel="icon" href="./img/logoicon.png">
+      <script src="./chart.js"></script> 
   </head>
   <body>
       <header>
           <div class="container">
-              <img src="./logo.png" id="logo">
+              <img src="./img/logo.png" id="logo">
               <div class="menu">
                  <a href="account.html" id="ac" class="home">Conta </a>
                  <a href="index.html" id="in" class="home">Início </a>
@@ -23,10 +23,10 @@
           </div>
       </header>   
     <div>
-        <canvas id="myChart"></canvas>
+        <canvas id="myChart" ></canvas>
         <div id="totalBox">
           <h3>Total: <span id="totalReais">R$ 0,00</span></h3>
-          <script src="./java.js"></script>
+          <script src="./java/java.js"></script>
         </div>      
     </div>
     <div class="about-us">
