--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	    <meta name="Tinôco" content="">
       <title>ConsuWatts | Bem-Vindo!</title>
       <link rel="stylesheet" href="./style.css">
-      <link rel="icon" href="./img/logoicon.png">
+      <link rel="icon" href="./logoicon.png">
       <script src="./chart.js"></script> 
   </head>
   <body>
       <header>
           <div class="container">
-              <img src="./img/logo.png" id="logo">
+              <img src="./logo.png" id="logo">
               <div class="menu">
                  <a href="account.html" id="ac" class="home">Conta </a>
                  <a href="index.html" id="in" class="home">Início </a>
